[package]
name = "impnao"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
dotenv = "0.8.0"
log = "0.3.6"
log4rs = {version = "0.4.8", features = ["toml"]}
serde = "^0.7.0"
serde_macros = "^0.7.0"
webapp = {path = "../webapp"}
clockwork = {path = "../clockwork"}
clockwork-handlebars = {path = "../clockwork-handlebars"}
clockwork-server = {path = "../clockwork-server"}
