[package]
name = "impnao"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
dotenv = "0.8.0"
log = "0.3.6"
log4rs = {version = "0.4.8", features = ["toml"]}
serde = "^0.8.0"
serde_json = "^0.8.0"
serde_macros = "^0.8.0"
webapp = {git = "https://github.com/carbidegames/webapp.git"}
clockwork = {git = "https://github.com/carbidegames/clockwork.git"}
clockwork-handlebars = {git = "https://github.com/carbidegames/clockwork-handlebars.git"}
clockwork-server = {git = "https://github.com/carbidegames/clockwork-server.git"}
